all link updated

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login/Registration</title>
-    <link rel="stylesheet" href="../CSS/nav.css">
-    <link rel="stylesheet" href="../CSS/registration.css">
+    <link rel="stylesheet" href="/ZipTip-FrontEnd/CSS/nav.css">
+    <link rel="stylesheet" href="/ZipTip-FrontEnd/CSS/registration.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700" rel="stylesheet">
     
 </head>
@@ -22,7 +22,7 @@
 
         <div>
             <a href="#"></a>
-            <a href="../HTML/product.html">Products</a>
+            <a href="/ZipTip-FrontEnd/HTML/AllRestaurent.html">Restaurents</a>
             <a href="#" onclick="toggleLogin()" id="login-nav">Register</a>
         </div>
     </nav>
@@ -113,9 +113,9 @@
 
 
 
-    <script src="../Script/registration.js"></script>
-    <script src="../Script/login.js"></script>
-    <script src="../Script/allRestauernt.js"></script>
+    <script src="/ZipTip-FrontEnd/Script/registration.js"></script>
+    <script src="/ZipTip-FrontEnd/Script/login.js"></script>
+    <script src="/ZipTip-FrontEnd/Script/allRestauernt.js"></script>
 </body>
 
 
