--- a/HTML/AllRestaurent.html
+++ b/HTML/AllRestaurent.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>All Restaurent</title>
-  <link rel="stylesheet" href="/ZipTip-FrontEnd/CSS/nav.css">
-  <link rel="stylesheet" href="/ZipTip-FrontEnd/CSS/AllRestaurent.css">
+  <link rel="stylesheet" href="/CSS/nav.css">
+  <link rel="stylesheet" href="/CSS/AllRestaurent.css">
   <style>
     
   #user_details{
@@ -54,7 +54,7 @@
       <div id="user_details">
         <!-- <a></a> -->
 
-        <a href="/ZipTip-FrontEnd/index.html" onclick="toggleLogin()" id="user-key">Register</a>
+        <a href="/index.html" onclick="toggleLogin()" id="user-key">Register</a>
 
         <a href=""> User</a>
       </div>
@@ -76,8 +76,8 @@
   <div id="product-grid"></div>
 
 
-  <script src="/ZipTip-FrontEnd/Script/allRestauernt.js"></script>
-  <script src="/ZipTip-FrontEnd/Script/login.js"></script>
+  <script src="/Script/allRestauernt.js"></script>
+  <script src="/Script/login.js"></script>
 </body>
 
 </html>
