--- a/HTML/Restaurent.html
+++ b/HTML/Restaurent.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurent</title>
-  <link rel="stylesheet" href="/ZipTip-FrontEnd/CSS/restaurent.css">
+  <link rel="stylesheet" href="/CSS/restaurent.css">
 </head>
 <style>
 body{
@@ -117,6 +117,6 @@ body{
   <div id="left1"></div>
 
 
-<script src="/ZipTip-FrontEnd/Script/restaurent.js"></script>
+<script src="/Script/restaurent.js"></script>
 </body>
 </html>
