--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 
 
 
-    <script src="/ZipTip-FrontEnd/Script/registration.js"></script>
-    <script src="/ZipTip-FrontEnd/Script/login.js"></script>
-    <script src="/ZipTip-FrontEnd/Script/allRestauernt.js"></script>
+    <script src="/Script/registration.js"></script>
+    <script src="/Script/login.js"></script>
+    <script src="/Script/allRestauernt.js"></script>
 </body>
 
 
