--- a/HTML/checkoutpage.html
+++ b/HTML/checkoutpage.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
 
-    <link rel="stylesheet" href="/ZipTip-FrontEnd/CSS/checkoutpage.css">
+    <link rel="stylesheet" href="/CSS/checkoutpage.css">
     
 </head>
 
@@ -21,8 +21,8 @@
     <div id="bill_container">
         <div id="left">
             <h3>we hope, You had a good Ordering Experience</h3>
-            <img src="/ZipTip-FrontEnd/boy-exploding-party-popper.png" alt="">
-            <a href="/ZipTip-FrontEnd/HTML/AllRestaurent.html">I want to Order More</a>
+            <img src="/boy-exploding-party-popper.png" alt="">
+            <a href="/HTML/AllRestaurent.html">I want to Order More</a>
         </div>
         <div id="bill">
 
@@ -57,14 +57,14 @@
             h3.innerText = `Hi food lover..! You are not Logged in Please Login First`;
 
             icon = document.createElement('img');
-            icon.src = '/ZipTip-FrontEnd/caution-sign.png';
+            icon.src = '/caution-sign.png';
             icon.style.width = '30%';
             icon.style.animation = 'spin 15s linear infinite';
 
             let btn = document.createElement('button');
             btn.innerText = 'Yes! i want to Log in';
             btn.addEventListener('click', () => {
-                window.location.href = '/ZipTip-FrontEnd/index.html';
+                window.location.href = '/index.html';
                 console.log('clicked')
             })
             div.style.width = '70%';
