--- a/HTML/AllRestaurent.html
+++ b/HTML/AllRestaurent.html
@@ -63,6 +63,7 @@
       <div class="logo">
         ZipTip
       </div>
+      <p>Aab Ghar Jaisa Khana Bahar Se bhi</p>
     </div>
 
     <!-- <div id="search">
