--- a/HTML/AllRestaurent.html
+++ b/HTML/AllRestaurent.html
@@ -63,7 +63,7 @@
       <div class="logo">
         ZipTip
       </div>
-      <p>Aab Ghar Jaisa Khana Bahar Se bhi</p>
+      <p>Aab <SPAN class="fontIncrease"> GHAR </SPAN> Jaisa  Khana... <span class="fontIncrease"> BAHAR </span> Se bhi...</p>
     </div>
 
     <!-- <div id="search">
